<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.ruben.easytransport.GestionDeRutas"
    android:background="#49fffa8c">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/scrollView">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:text="@string/Remitente"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textRemitente"
                android:textColor="#610B0B"
                android:textSize="20dp" />

            <EditText
                android:layout_width="327dp"
                android:layout_height="wrap_content"
                android:id="@+id/editTRemitente"
                android:layout_marginTop="15dp"
                android:editable="false"
                android:background="#5c696969" />

            <TextView
                android:text="@string/Transportista"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textTransportista"
                android:layout_marginTop="15dp"
                android:textColor="#610B0B"
                android:textSize="20sp" />

            <EditText
                android:layout_width="327dp"
                android:layout_height="wrap_content"
                android:id="@+id/editTTransportista"
                android:layout_marginTop="15dp"
                android:editable="false"
                android:background="#5c696969" />

            <TextView
                android:text="@string/Origen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textOrigen"
                android:layout_marginTop="15dp"
                android:textColor="#610B0B"
                android:textSize="20sp" />

            <EditText
                android:layout_width="327dp"
                android:layout_height="wrap_content"
                android:id="@+id/editTOrigenAcuerdo"
                android:layout_marginTop="15dp"
                android:background="#5c696969"
                android:editable="false"
                android:enabled="true" />

            <TextView
                android:text="@string/Destino"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textDestino"
                android:layout_marginTop="15dp"
                android:textSize="20sp"
                android:textColor="#610B0B" />

            <EditText
                android:layout_width="327dp"
                android:layout_height="wrap_content"
                android:id="@+id/editTDestinoAcuerdo"
                android:layout_marginTop="15dp"
                android:background="#5c696969"
                android:enabled="true"
                android:editable="false"
                android:clickable="true" />

            <TextView
                android:text="@string/Entrega"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textEntrega"
                android:layout_marginTop="15dp"
                android:textSize="20sp"
                android:textColor="#610B0B" />

            <EditText
                android:layout_width="327dp"
                android:layout_height="wrap_content"
                android:hint="@string/textoEntrega"
                android:id="@+id/editTEntrega"
                android:layout_marginTop="15dp"
                android:background="#ffffffff" />


            <TextView
                android:text="@string/Recogida"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textRecogida"
                android:layout_marginTop="15dp"
                android:textSize="20sp"
                android:textColor="#610B0B" />

            <EditText
                android:layout_width="327dp"
                android:layout_height="wrap_content"
                android:hint="@string/textoRecogida"
                android:id="@+id/editTRecogida"
                android:layout_marginTop="15dp"
                android:background="#ffffffff" />

            <TextView
                android:text="@string/Dinero"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textDinero"
                android:layout_marginTop="15dp"
                android:textSize="20sp"
                android:textColor="#610B0B" />

            <EditText
                android:layout_width="327dp"
                android:layout_height="wrap_content"
                android:hint="@string/textoDinero"
                android:id="@+id/editTDinero"
                android:layout_marginTop="15dp"
                android:background="#ffffffff"
                android:inputType="numberDecimal" />

            <TextView
                android:text="@string/Comentario"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textComentario"
                android:layout_marginTop="15dp"
                android:textColor="#610B0B"
                android:textSize="20dp"/>

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/editTComentarioAcuerdo"
                android:layout_marginTop="15dp"
                android:background="#ffffffff"
                android:layout_marginBottom="30dp"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Enviar acuerdo"
                android:id="@+id/buttonAnyadirAcuerdo"
                android:layout_marginTop="15dp"
                android:layout_gravity="center_horizontal"
                android:onClick="buttonOnClick"
                android:background="@drawable/border_button"/>



        </LinearLayout>
    </ScrollView>


</RelativeLayout>
