

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="#49fffa8c"
    tools:context="com.example.ruben.easytransport.GestionDeRutas">

  <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
      android:id="@+id/scrollView">

   <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >
    <TextView
        android:text="@string/Spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView"/>
    <Spinner
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/lista1"
        android:layout_below="@+id/textView"
        android:layout_alignLeft="@+id/textView"
        android:layout_marginTop="13dp"
         />
    <TextView
        android:text="@string/Origen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textOrigen"
        android:layout_marginTop="15dp"
        android:layout_below="@+id/lista1"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:hint="@string/textoOrigen"
        android:layout_height="wrap_content"
        android:id="@+id/editTOrigen"
        android:layout_below="@+id/textOrigen"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="15dp"
        android:background="#ffffffff" />

    <TextView
        android:text="@string/Destino"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textDestino"
        android:layout_marginTop="15dp"
        android:layout_below="@+id/editTOrigen"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/textoDestino"
        android:id="@+id/editTDestino"
        android:layout_below="@+id/textDestino"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="15dp"
        android:background="#ffffffff" />

    <TextView
        android:text="@string/Fecha"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textFecha"
        android:layout_marginTop="15dp"
        android:layout_below="@+id/editTDestino"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <DatePicker
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/datePicker"
        android:spinnersShown="true"
        android:calendarViewShown="false"
        android:clickable="true"
        android:scaleY="0.8"
        android:scaleX="0.8"/>

    <TextView
        android:text="@string/Hora"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textHora"
        android:layout_marginTop="15dp"
        android:layout_below="@+id/datePicker"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

       <TimePicker
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:id="@+id/timePicker"
           android:scaleY="0.8"
           android:scaleX="0.8"

           />

       <TextView
           android:text="@string/Comentario"
           android:layout_width="fill_parent"
           android:layout_height="wrap_content"
           android:id="@+id/textComentario"
           android:layout_marginTop="15dp"
           android:layout_below="@+id/timePicker"
           android:layout_alignParentLeft="true"
           android:layout_alignParentStart="true" />

       <EditText
           android:layout_width="fill_parent"
           android:layout_height="wrap_content"
           android:id="@+id/editTComentario"
           android:layout_below="@+id/textComentario"
           android:layout_alignParentLeft="true"
           android:layout_alignParentStart="true"
           android:layout_marginTop="15dp"
           android:background="#ffffffff" />

       <Button
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="Añadir ruta"
           android:layout_below="@+id/editTComentario"
           android:id="@+id/button"
           android:layout_marginTop="15dp"
           android:layout_alignParentTop="true"
           android:layout_gravity="center_horizontal"
           android:onClick="buttonOnClick" />

   </LinearLayout>
</ScrollView>


</RelativeLayout>
